--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <!-- <link rel="stylesheet" href="css/main.css" /> -->
-    <title>Loading Screen | By Exsite</title>
+    <title>Vatan Roleplay</title>
   </head>
   <body>
     <div class="background"></div>
@@ -30,7 +30,7 @@
 
     <main>
       <div class="title">
-        <h2>Welcome to,</h2>
+        <h2>Hoşgeldiniz</h2>
         <h1 id="title"></h1>
         <div id="history"></div>
       </div>
