--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <nav>
       <div id="announcement"></div>
-      <span id="map">Oynadığınız map </span>
+      <span id="map">Oynadığınız map ;</span>
       <span id="steamid"></span>
     </nav>
 
