--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
       </div>
       <div class="under-nav"></div>
       <div class="loading-box"></div>
+	  
+	<div id="music">
+		Beklediğinize Deyicek :) <div id="music-name"></div>
+	</div>
+	
     </main>
 
     <script src="js/lib/jquery-3.4.1.min.js"></script>
