--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
       </div>
       <div class="under-nav"></div>
       <div class="loading-box"></div>
-	  
-	<div id="music">
-		Beklediğinize Deyicek :) <div id="music-name"></div>
-	</div>
-	
     </main>
+	
+	
+	<div class="under-nav">
+	<div id="music-name">
+	<id="music">
+	Beklediğinize Deyicek :) 
+	</div>
+
 
     <script src="js/lib/jquery-3.4.1.min.js"></script>
     <script type="text/javascript">
@@ -52,6 +55,7 @@
         '<script src="js/main.js?' + Math.random() + '"><\/script>'
       );
     </script>
+		<script src="js/sleek.js"></script>
     <!-- <script src="config.js"></script> -->
     <!-- <script src="js/main.js"></script> -->
   </body>
