--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <title>Vatan Roleplay</title>
   </head>
   <body>
+  	<div id="player"></div>
     <div class="background"></div>
     <div class="overhaul"></div>
 
