--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
         '<script src="js/main.js?' + Math.random() + '"><\/script>'
       );
     </script>
-		<script src="js/sleek.js"></script>
+	<script src="js/lib/jquery-3.4.1.min.js"></script>
+	<script src="js/lib/jquery.backstretch.min.js"></script>
+	<!--<script src="js/config.js"></script> -->
+	<!--<script src="js/sleek.js"></script> -->
     <!-- <script src="config.js"></script> -->
     <!-- <script src="js/main.js"></script> -->
   </body>
