--- a/index.html
+++ b/index.html
@@ -56,11 +56,13 @@
         '<script src="js/main.js?' + Math.random() + '"><\/script>'
       );
     </script>
+	
 	<script src="js/lib/jquery-3.4.1.min.js"></script>
 	<script src="js/lib/jquery.backstretch.min.js"></script>
-	<!--<script src="js/config.js"></script> -->
-	<!--<script src="js/sleek.js"></script> -->
-    <!-- <script src="config.js"></script> -->
-    <!-- <script src="js/main.js"></script> -->
+	<script src="js/configs.js"></script>
+	<script src="js/sleek.js"></script>
+    <script src="config.js"></script>
+    <script src="js/main.js"></script>
+	
   </body>
 </html>
