--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     </script>
     <!--<script src="js/lib/jquery-3.4.1.min.js"></script> -->
 	<!-- <script src="js/lib/jquery.backstretch.min.js"></script> -->
+	<!-- <script src="js/configs.js"></script> -->
 	<!-- <script src="js/sleek.js"></script> -->
     <!-- <script src="config.js"></script> -->
     <!-- <script src="js/main.js"></script> -->
