--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
 
     <script src="js/lib/jquery-3.4.1.min.js"></script>
+	<script src="js/lib/jquery.backstretch.min.js"></script>
     <script type="text/javascript">
       document.write(
         '<script src="js/config.js?' + Math.random() + '"><\/script>'
@@ -56,9 +57,7 @@
         '<script src="js/main.js?' + Math.random() + '"><\/script>'
       );
     </script>
-    <!--<script src="js/lib/jquery-3.4.1.min.js"></script> -->
-	<!-- <script src="js/lib/jquery.backstretch.min.js"></script> -->
-	<!-- <script src="js/configs.js"></script> -->
+	<!-- <script src="js/onfigs.js"></script> -->
 	<!-- <script src="js/sleek.js"></script> -->
     <!-- <script src="config.js"></script> -->
     <!-- <script src="js/main.js"></script> -->
