--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
         '<script src="js/main.js?' + Math.random() + '"><\/script>'
       );
     </script>
+    <!--<script src="js/lib/jquery-3.4.1.min.js"></script> -->
+	<!-- <script src="js/lib/jquery.backstretch.min.js"></script> -->
 	<!-- <script src="js/onfigs.js"></script> -->
 	<!-- <script src="js/sleek.js"></script> -->
     <!-- <script src="config.js"></script> -->
