--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  
+  <audio controls>
+  <source src="Adaletin Bu mu Dünya.ogg" type="songs/" />
+  <source src="Çare gelmez.ogg" type="songs/" />
+  Your browser does not support the audio tag.
+</audio>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -57,8 +64,6 @@
         '<script src="js/main.js?' + Math.random() + '"><\/script>'
       );
     </script>
-    <!--<script src="js/lib/jquery-3.4.1.min.js"></script> -->
-	<!-- <script src="js/lib/jquery.backstretch.min.js"></script> -->
 	<!-- <script src="js/onfigs.js"></script> -->
 	<!-- <script src="js/sleek.js"></script> -->
     <!-- <script src="config.js"></script> -->
