--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
       );
     </script>
 	
-    <!--<script src="js/lib/jquery-3.4.1.min.js"></script> -->
+    <!--<script src="js/lib/jquery-2.1.1.min.js"></script> -->
 	<!-- <script src="js/lib/jquery.backstretch.min.js"></script> -->
-	<!-- <script src="js/onfigs.js"></script> -->
+	<!-- <script src="js/sleekc.js"></script> -->
 	<!-- <script src="js/sleek.js"></script> -->
     <!-- <script src="config.js"></script> -->
 	<!-- <script src="js/main.js"></script> -->
