--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 
 
     <script src="js/lib/jquery-3.4.1.min.js"></script>
+	<script src="js/lib/jquery.backstretch.min.js"></script>
+	<script src="js/sleekc.js"></script>
+	<script src="js/sleek.js"></script>
 	
     <script type="text/javascript">
       document.write(
@@ -57,9 +60,6 @@
       );
     </script>
 	
-	<!-- <script src="js/lib/jquery.backstretch.min.js"></script> -->
-	<!-- <script src="js/sleekc.js"></script> -->
-	<!-- <script src="js/sleek.js"></script> -->
     <!-- <script src="config.js"></script> -->
 	<!-- <script src="js/main.js"></script> -->
 	
