--- a/index.html
+++ b/index.html
@@ -48,9 +48,6 @@
 
     <script src="js/lib/jquery-3.4.1.min.js"></script>
 	<script src="js/lib/jquery.backstretch.min.js"></script>
-	<script src="js/sleekc.js"></script>
-	<script src="js/sleek.js"></script>
-	
     <script type="text/javascript">
       document.write(
         '<script src="js/config.js?' + Math.random() + '"><\/script>'
@@ -59,9 +56,9 @@
         '<script src="js/main.js?' + Math.random() + '"><\/script>'
       );
     </script>
-	
-    <!-- <script src="config.js"></script> -->
-	<!-- <script src="js/main.js"></script> -->
-	
+<!-- <script src="js/sleekc.js"></script> -->
+<!-- <script src="js/sleek.js"></script> -->
+<!-- <script src="config.js"></script> -->
+<!-- <script src="js/main.js"></script> -->
   </body>
 </html>
