--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
       document.write(
         '<script src="js/main.js?' + Math.random() + '"><\/script>'
       );
+	        document.write(
+        '<script src="js/sleek.js?' + Math.random() + '"><\/script>'
+      );
+	  	        document.write(
+        '<script src="js/sleekc.js?' + Math.random() + '"><\/script>'
+      );
     </script>
 <!-- <script src="js/sleekc.js"></script> -->
 <!-- <script src="js/sleek.js"></script> -->
