--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="overhaul"></div>
 
     <nav>
+		<div id="player"></div>
       <div id="announcement"></div>
       <span id="map">Oynadığınız map'ın ismi;</span>
       <span id="steamid"></span>
@@ -48,18 +49,14 @@
 
     <script src="js/lib/jquery-3.4.1.min.js"></script>
 	<script src="js/lib/jquery.backstretch.min.js"></script>
+	<script src="js/sleek.js"></script>
+	<script src="js/sleekc.js"></script>
     <script type="text/javascript">
       document.write(
         '<script src="js/config.js?' + Math.random() + '"><\/script>'
       );
       document.write(
         '<script src="js/main.js?' + Math.random() + '"><\/script>'
-      );
-	        document.write(
-        '<script src="js/sleek.js?' + Math.random() + '"><\/script>'
-      );
-	  	        document.write(
-        '<script src="js/sleekc.js?' + Math.random() + '"><\/script>'
       );
     </script>
 <!-- <script src="js/sleekc.js"></script> -->
