--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 
 
     <script src="js/lib/jquery-3.4.1.min.js"></script>
+	<script src="js/lib/jquery-2.1.1.min.js"></script>
+	
 	<script src="js/lib/jquery.backstretch.min.js"></script>
 	<script src="js/sleek.js"></script>
 	<script src="js/sleekc.js"></script>
