--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
       </div>
       <div class="under-nav"></div>
       <div class="loading-box"></div>
+	  <div id="divCheckbox" 
+style="visibility: hidden">	<div id="player"></div>
     </main>
 	
 	
@@ -44,6 +46,7 @@
 	<id="music">
 	Beklediğinize Deyicek :) 
 	</div>
+
 
 
     <script src="js/lib/jquery-3.4.1.min.js"></script>
@@ -64,5 +67,6 @@
 <!-- <script src="js/sleek.js"></script> -->
 <!-- <script src="config.js"></script> -->
 <!-- <script src="js/main.js"></script> -->
+
   </body>
 </html>
