--- a/index.html
+++ b/index.html
@@ -40,14 +40,7 @@
 style="visibility: hidden">	<div id="player"></div>
     </main>
 	
-	
-	<div class="under-nav">
-	<div id="music-name">
-	<id="music">
-	Beklediğinize Deyicek :) 
-	</div>
-
-
+	<div class="under-nav"><div id="music-name"><id="music">Beklediğinize Deyicek :) </div>
 
     <script src="js/lib/jquery-3.4.1.min.js"></script>
 	<script src="js/lib/jquery-2.1.1.min.js"></script>
